src/objects/SomTv_Angebot__c.object
<CustomObject>
    <description>Hier werden die verschiedenen Angebotsoptionen dargestellt und zwischen den Fachbereichen abgestimmt. wird von TV genutzt</description>
    <fields>
        <fullName>Netto_USize__c</fullName>
        <description>Hochgerechnete Universe-Size (in EUR; Netto-SoA-7.1M &amp; Netto-SoA-IP) in EUR</description>
        <formula>SomTv_MN3_Bruttoermittlung__c  +  SomTv_IPEinschaetzungMN3inEUR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hochgerechnete Universe-Size (in EUR; Netto-SoA-7.1M &amp; Netto-SoA-IP) in EUR</inlineHelpText>
        <label>Netto USize</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTV_Grund_1_fuer_Rabattierung_Angebot__c</fullName>
        <description>Angabe von Gründen für die Gewährung von Sonder-Naturalrabatten aus Angebotssicht</description>
        <inlineHelpText>Angabe von Gründen für die Gewährung von Sonder-Naturalrabatten aus Angebotssicht</inlineHelpText>
        <label>Hintergrundinformationen Angebot</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTV_Sonder_NR_2_RM__c</fullName>
        <description>Sonder-Naturalrabatt 2 aus Sicht von AdCommitment Controlling in %</description>
        <inlineHelpText>Sonder-Naturalrabatt 2 aus Sicht von AdCommitment Controlling in %</inlineHelpText>
        <label>Sonder-NR 2 (%) RM</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTV_Sonder_NR_2_in_EUR_Kopf_formel__c</fullName>
        <description>Sonder-NR in Geldeinheiten</description>
        <formula>SomTv_SonderNR2Kopf_c__c*SomTv_MB1_konsolidiert__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sonder-NR in Geldeinheiten</inlineHelpText>
        <label>Sonder-NR 2 in EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_AEKopfEur__c</fullName>
        <description>Agenturprovision in EUR</description>
        <formula>SomTv_AEKopf_c__c * SomTv_MN1_Bruttoermittlung__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Agenturprovision in EUR</inlineHelpText>
        <label>AE in EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_AEKopf_c__c</fullName>
        <defaultValue>0.15</defaultValue>
        <description>Agenturprovsion in %</description>
        <inlineHelpText>Agenturprovsion in %</inlineHelpText>
        <label>AE (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_Abgeschlossener_GesamtrabattKopf__c</fullName>
        <description>Konsekutiv berechneter Gesamtrabatt: 1-(1-Barrabatt) * (1-AE) * (1-Skonto)</description>
        <formula>1 -  ( 1 - SomTv_BRKopf_c__c) *  ( 1 - SomTv_AEKopf_c__c )  *  ( 1 - SomTv_SkontoKopf__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Konsekutiv berechneter Gesamtrabatt: 1-(1-Barrabatt) * (1-AE) * (1-Skonto)</inlineHelpText>
        <label>Abgeschlossener Gesamtrabatt (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_Aktuelle_Sicht__c</fullName>
        <description>Hier steht welche Sicht für die Berechnung der Zahlen im Kopf verwendet wird.</description>
        <inlineHelpText>Hier steht welche Sicht für die Berechnung der Zahlen im Kopf verwendet wird.</inlineHelpText>
        <label>Aktuell berechnete Sicht</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_BRAngebot__c</fullName>
        <description>Barrabatt in % bzgl. des Angebots</description>
        <inlineHelpText>Barrabatt in % bzgl. des Angebots</inlineHelpText>
        <label>BR (%) Angebot</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_BRIST__c</fullName>
        <description>Barrabatt in %</description>
        <inlineHelpText>Barrabatt in %</inlineHelpText>
        <label>BR (%) DSB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_BRKopfEur__c</fullName>
        <description>Barrabatt in EUR</description>
        <formula>SomTv_BRKopf_c__c * SomTv_MB1_Bruttoermittlung__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Barrabatt in EUR</inlineHelpText>
        <label>BR in EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_BRKopf_c__c</fullName>
        <description>Barrabatt in %</description>
        <inlineHelpText>Barrabatt in %</inlineHelpText>
        <label>BR (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_BRKunde__c</fullName>
        <description>Barrabatt in % für Kunde</description>
        <inlineHelpText>Barrabatt in % für Kunde</inlineHelpText>
        <label>BR (%) Kunde</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_BRRM__c</fullName>
        <description>Barrabatt in % Revenue Management</description>
        <inlineHelpText>Barrabatt in % Revenue Management</inlineHelpText>
        <label>BR (%) RM</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_BR__c</fullName>
        <description>Barrabatt in %</description>
        <inlineHelpText>Barrabatt in %</inlineHelpText>
        <label>BR (%) Sales</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_BegruendungSonderNR1__c</fullName>
        <label>Begründung Sonder-NR 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_BegruendungSonderNR2__c</fullName>
        <label>Begründung Sonder-NR 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_BrAktionsrabattHinweis__c</fullName>
        <description>Hinweise zu Aktionsrabatten-BR</description>
        <inlineHelpText>Hinweise zu Aktionsrabatten-BR</inlineHelpText>
        <label>Hinweis Aktionsrabatt-BR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_BrAktionsrabatt__c</fullName>
        <description>Aktionsrabatt</description>
        <inlineHelpText>Aktionsrabatt</inlineHelpText>
        <label>Aktionsrabatt</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_BrDsbEur__c</fullName>
        <description>Barrabatt in EUR DSB</description>
        <formula>SomTv_BRIST__c * SomTv_MB1_Bruttoermittlung__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Barrabatt in EUR DSB</inlineHelpText>
        <label>BR in EUR DSB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_BrSonstigeHinweis__c</fullName>
        <description>Hinweis zu sonstigen Barrabatten</description>
        <inlineHelpText>Hinweis zu sonstigen Barrabatten</inlineHelpText>
        <label>Hinweis Sonstige BR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_BrSonstige__c</fullName>
        <description>Sonstige Barrabatte</description>
        <inlineHelpText>Sonstige Barrabatte</inlineHelpText>
        <label>Sonstige BR</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_BrTestflightHinweis__c</fullName>
        <description>Hinweis zu Testflight Barrabatt</description>
        <inlineHelpText>Hinweis zu Testflight Barrabatt</inlineHelpText>
        <label>Hinweis Testflight-BR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_BrTestflight__c</fullName>
        <description>Testflight Barrabatt</description>
        <inlineHelpText>Testflight Barrabatt</inlineHelpText>
        <label>Testflight-BR</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_Delegationsrahmen__c</fullName>
        <description>Text, der anzeigt ob das tatsächlich abgegebene Angebot innerhalb oder ausserhalb der freigegebenen Rabattsätze liegt.</description>
        <formula>if (AND(SomTv_YieldAngebot__c &lt;  SomTv_Yield_DSB_Sicht__c, (ISNULL( SomTv_YieldAngebot__c ) &lt;&gt; True)),
&quot;ausserhalb freigegebener Rabattsätze&quot;,
&quot;im Rahmen der DSB-Freigabe&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Text, der anzeigt ob das tatsächlich abgegebene Angebot innerhalb oder ausserhalb der freigegebenen Rabattsätze liegt.</inlineHelpText>
        <label>Delegationsrahmen</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_DigitalDisplay__c</fullName>
        <description>Einschätzung des digitalen Display-Investments des Kunden bei der 7.1M</description>
        <inlineHelpText>Einschätzung des digitalen Display-Investments des Kunden bei der 7.1M</inlineHelpText>
        <label>Digital Display</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_DigitalVideo__c</fullName>
        <description>Einschätzung des digitalen Video-Investments des Kunden bei der 7.1M</description>
        <inlineHelpText>Einschätzung des digitalen Video-Investments des Kunden bei der 7.1M</inlineHelpText>
        <label>Digital Video</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_EntwicklungMediamix__c</fullName>
        <description>Ausführungen zur Entwicklung des Mediamix</description>
        <inlineHelpText>Ausführungen zur Entwicklung des Mediamix</inlineHelpText>
        <label>Entwicklung Mediamix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_Facebook__c</fullName>
        <description>Einschätzung in EUR des Facebook-Investments des Werbungtreibenden in Deutschland</description>
        <inlineHelpText>Einschätzung in EUR des Facebook-Investments des Werbungtreibenden in Deutschland</inlineHelpText>
        <label>Facebook</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_Grund1FuerRabattierungKunde__c</fullName>
        <description>Anführung von Gründen für die Rabattierung seitens des Kunde</description>
        <inlineHelpText>Anführung von Gründen für die Rabattierung seitens des Kunde</inlineHelpText>
        <label>Hintergrundinformationen Kunde</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_Grund1FuerRabattierungRM__c</fullName>
        <description>Anführung von Gründen dür die Rabattierung von Revennue Management</description>
        <inlineHelpText>Anführung von Gründen dür die Rabattierung von Revennue Management</inlineHelpText>
        <label>Hintergrundinformationen RM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_Grund1FuerRabattierung__c</fullName>
        <description>Anführung von Gründen für die Rabattierung</description>
        <inlineHelpText>Anführung von Gründen für die Rabattierung</inlineHelpText>
        <label>Hintergrundinformationen Sales</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_Grund_f_RabattierungDSB_c__c</fullName>
        <description>Angabe von Gründen für die Gewährung von Sonder-Naturalrabatten</description>
        <inlineHelpText>Angabe von Gründen für die Gewährung von Sonder-Naturalrabatten</inlineHelpText>
        <label>Hintergrundinformationen DSB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_Grund_fuer_RabattierungKopf__c</fullName>
        <description>Gründe für die Gewährung von Sonder-Naturalrabatten</description>
        <inlineHelpText>Gründe für die Gewährung von Sonder-Naturalrabatten</inlineHelpText>
        <label>Hintergrundinformationen Kopf</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_IPEinschaetzungMN3inEUR__c</fullName>
        <description>Einschätzung des IP-Nettobudgets in EUR</description>
        <inlineHelpText>Einschätzung des IP-Nettobudgets in EUR</inlineHelpText>
        <label>IP Netto (Einschätzung Sales)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_IPEinschaetzungYield__c</fullName>
        <description>IP Einschätzung des Yield (MN3/MB1*100) in %</description>
        <inlineHelpText>IP Einschätzung des Yield (MN3/MB1*100) in %</inlineHelpText>
        <label>IP-Einschätzung Yield (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_InfofeldDisplay__c</fullName>
        <label>Display (Infofeld)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SomTv_InfofeldFacebook__c</fullName>
        <description>Tendenzen oder Info zu dem zukünftigen Verhalten bzw. Strategie bzgl. Facebook und anderen Socialmediaplattformen</description>
        <inlineHelpText>Tendenzen oder Info zu dem zukünftigen Verhalten bzw. Strategie bzgl. Facebook und anderen Socialmediaplattformen</inlineHelpText>
        <label>Facebook (Infofeld)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SomTv_InfofeldVideo__c</fullName>
        <label>Video (Infofeld)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SomTv_InfofeldYouTube__c</fullName>
        <description>Tendenzen oder Info zu dem zukünftigen Verhalten bzw. Strategie bzgl. YouTube</description>
        <inlineHelpText>Tendenzen oder Info zu dem zukünftigen Verhalten bzw. Strategie bzgl. YouTube</inlineHelpText>
        <label>YouTube (Infofeld)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SomTv_Konsens__c</fullName>
        <inlineHelpText>Besteht Einvernehmen zwischen Sales und RM wird hier ein Konsens vermerkt. Bei Auswahl des Wertes „Konsens“ erfolgt eine automatische Synchronisation der Rabatte in der Sales-Sicht auf Basis der Revenue Management Sicht.</inlineHelpText>
        <label>Konsens</label>
        <picklist>
            <picklistValues>
                <fullName>Konsens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>kein Eintrag</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>kein Konsens</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomTv_LASParameter__c</fullName>
        <description>Ausführungen zu Parametern der Leistungsabsicherung</description>
        <inlineHelpText>Ausführungen zu Parametern der Leistungsabsicherung</inlineHelpText>
        <label>LAS Parameter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_LAS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Leistungsabsicherung</description>
        <inlineHelpText>Leistungsabsicherung</inlineHelpText>
        <label>LAS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomTv_MB1_Angebot_Bruttoermittlung__c</fullName>
        <description>MB1=MN1 / (1-CR%)</description>
        <formula>SomTv_MN1_Angebot_Bruttoermittlung__c/(1-SomTv_BRAngebot__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>MB1=MN1 / (1-CR%)</inlineHelpText>
        <label>MB1 Angebot (B)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MB1_Bruttoermittlung__c</fullName>
        <description>MB1=MN1 / (1-CR%)</description>
        <formula>SomTv_MN1_Bruttoermittlung__c/(1-SomTv_BRKopf_c__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>MB1=MN1 / (1-CR%)</inlineHelpText>
        <label>MB1 (B)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MB1__c</fullName>
        <description>MB1=MN1 / (1-CR%)</description>
        <inlineHelpText>MB1=MN1 / (1-CR%)</inlineHelpText>
        <label>MB1 (K)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MB1_konsolidiert__c</fullName>
        <description>MB1=MN1 / (1-CR%) bzw. MB1=Bruttoinvestment des Accounts</description>
        <formula>IF( RecordType.Name  = &quot;MB1 Basis&quot;,  SomTv_MB1__c ,  SomTv_MB1_Bruttoermittlung__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>MB1=MN1 / (1-CR%) bzw. MB1=Bruttoinvestment des Accounts</inlineHelpText>
        <label>MB1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MB3Angebot__c</fullName>
        <description>MB3=MB1+MB1*NR%+MB1*SoNR 1%+MB1*SoNR 2%</description>
        <formula>SomTv_MB1__c + SomTv_MB1__c * SomTv_NRAngebot__c + SomTv_MB1__c * SomTv_SonderNR1Angebot__c + SomTv_MB1__c * SomTv_Sonder_NR_2_Angebot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>MB3=MB1+MB1*NR%+MB1*SoNR 1%+MB1*SoNR 2%</inlineHelpText>
        <label>MB3 Angebot</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MB3Kopf__c</fullName>
        <description>MB1+MB1*NR%+MB1*SoNR 1%+MB1*SoNR 2%</description>
        <formula>SomTv_MB1__c  +  ( SomTv_MB1__c * SomTv_NRKopf_c__c )   +  ( SomTv_MB1__c  * SomTv_SonderNR1Kopf_c__c )  +  ( SomTv_MB1__c  * SomTv_SonderNR2Kopf_c__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>MB1+MB1*NR%+MB1*SoNR 1%+MB1*SoNR 2%</inlineHelpText>
        <label>MB3 (K)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MB3_Angebot_Bruttoermittlung__c</fullName>
        <description>MB1+MB1*NR%+MB1*SoNR 1%+MB1*SoNR 2%</description>
        <formula>SomTv_MB1_Angebot_Bruttoermittlung__c + ( SomTv_MB1_Angebot_Bruttoermittlung__c* SomTv_NRAngebot__c) + (SomTv_MB1_Angebot_Bruttoermittlung__c* SomTv_SonderNR1Angebot__c ) + ( SomTv_MB1_Angebot_Bruttoermittlung__c *SomTv_Sonder_NR_2_Angebot__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>MB1+MB1*NR%+MB1*SoNR 1%+MB1*SoNR 2%</inlineHelpText>
        <label>MB3 Angebot (B)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MB3_Bruttoermittlung__c</fullName>
        <description>MB1+MB1*NR%+MB1*SoNR 1%+MB1*SoNR 2%</description>
        <formula>SomTv_MB1_Bruttoermittlung__c + ( SomTv_MB1_Bruttoermittlung__c* SomTv_NRKopf_c__c ) + ( SomTv_MB1_Bruttoermittlung__c* SomTv_SonderNR1Kopf_c__c ) + ( SomTv_MB1_Bruttoermittlung__c *SomTv_SonderNR2Kopf_c__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>MB1+MB1*NR%+MB1*SoNR 1%+MB1*SoNR 2%</inlineHelpText>
        <label>MB3 (B)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MB3_konsolidiert__c</fullName>
        <description>MB1+MB1*NR%+MB1*SoNR 1%+MB1*SoNR 2%</description>
        <formula>IF( RecordType.Name  = &quot;MB1 Basis&quot;,   SomTv_MB3Kopf__c  ,   SomTv_MB3_Bruttoermittlung__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>MB1+MB1*NR%+MB1*SoNR 1%+MB1*SoNR 2%</inlineHelpText>
        <label>MB3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN1Angebot__c</fullName>
        <description>MN1=MN2 / (1-AE%)</description>
        <formula>SomTv_MB1__c - SomTv_MB1__c * SomTv_BRAngebot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>MN1=MN2 / (1-AE%)</inlineHelpText>
        <label>MN1 Angebot</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN1Kopf__c</fullName>
        <description>MN1=MN2 / (1-AE%)</description>
        <formula>SomTv_MB1__c - SomTv_MB1__c * SomTv_BRKopf_c__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>MN1=MN2 / (1-AE%)</inlineHelpText>
        <label>MN1 (K)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN1_Angebot_Bruttoermittlung__c</fullName>
        <description>MN1=MN2 / (1-AE%)</description>
        <formula>SomTv_MN2_Angebot_Bruttoermittlung__c/(1-SomTv_AEKopf_c__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>MN1=MN2 / (1-AE%)</inlineHelpText>
        <label>MN1 Angebot (B)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN1_Bruttoermittlung__c</fullName>
        <description>MN1=MN2 / (1-AE%)</description>
        <formula>SomTv_MN2_Bruttoermittlung__c/(1-SomTv_AEKopf_c__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>MN1=MN2 / (1-AE%)</inlineHelpText>
        <label>MN1 (B)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN1_konsolidiert__c</fullName>
        <formula>IF( RecordType.Name = &quot;MB1 Basis&quot;, SomTv_MN1Kopf__c , SomTv_MN1_Bruttoermittlung__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MN1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN2Kopf__c</fullName>
        <description>MN2=MN3 / (1-Skto%)</description>
        <formula>SomTv_MN1Kopf__c - SomTv_MN1Kopf__c * SomTv_AEKopf_c__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>MN2=MN3 / (1-Skto%)</inlineHelpText>
        <label>MN2 (K)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN2_Angebot_Bruttoermittlung__c</fullName>
        <description>MN2=MN3 / (1-Skto%)</description>
        <formula>SomTv_MN3_Bruttoermittlung__c/(1-SomTv_SkontoKopf__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>MN2=MN3 / (1-Skto%)</inlineHelpText>
        <label>MN2 Angebot (B)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN2_Angebot__c</fullName>
        <description>MN2=MN3 / (1-Skto%)</description>
        <formula>SomTv_MN1Angebot__c - SomTv_MN1Angebot__c * SomTv_AEKopf_c__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>MN2=MN3 / (1-Skto%)</inlineHelpText>
        <label>MN2 Angebot</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN2_Bruttoermittlung__c</fullName>
        <description>MN2=MN3 / (1-Skto%)</description>
        <formula>SomTv_MN3_Bruttoermittlung__c/(1-SomTv_SkontoKopf__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>MN2=MN3 / (1-Skto%)</inlineHelpText>
        <label>MN2 (B)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN2_konsolidiert__c</fullName>
        <formula>IF( RecordType.Name = &quot;MB1 Basis&quot;, SomTv_MN2Kopf__c , SomTv_MN2_Bruttoermittlung__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MN2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN3Angebot__c</fullName>
        <description>Nettoinvestment des Angebotes bzw. MN3= MN2-Skonto%</description>
        <formula>SomTv_MN2_Angebot__c - SomTv_MN2_Angebot__c * SomTv_SkontoKopf__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Nettoinvestment des Angebotes bzw. MN3= MN2-Skonto%</inlineHelpText>
        <label>MN3 Angebot</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN3Kopf__c</fullName>
        <description>Nettoinvestment des Angebotes bzw. MN3= MN2-Skonto%</description>
        <formula>SomTv_MN2Kopf__c - SomTv_MN2Kopf__c * SomTv_SkontoKopf__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Nettoinvestment des Angebotes bzw. MN3= MN2-Skonto%</inlineHelpText>
        <label>MN3 (Kopf)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN3_Bruttoermittlung__c</fullName>
        <description>Nettoinvestment des Angebotes bzw. MN3= MN2-Skonto%</description>
        <inlineHelpText>Nettoinvestment des Angebotes bzw. MN3= MN2-Skonto%</inlineHelpText>
        <label>MN3 (B)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN3_RC__c</fullName>
        <description>Zeigt nur MN3 an, wenn das Angebot auf Realistic Case steht</description>
        <formula>SomTv_MN3_konsolidiert__c * IF (  SomTv_RealisticCaseAngebot__c , 1 , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Zeigt nur MN3 an, wenn das Angebot auf Realistic Case steht</inlineHelpText>
        <label>MN3 (RC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN3__c</fullName>
        <description>Nettoinvestment des Angebotes bzw. MN3= MN2-Skonto%</description>
        <inlineHelpText>Nettoinvestment des Angebotes bzw. MN3= MN2-Skonto%</inlineHelpText>
        <label>MN3 (K)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN3_konsolidiert__c</fullName>
        <description>Nettoinvestment des Angebotes bzw. MN3= MN2-Skonto%</description>
        <formula>IF( RecordType.Name  = &quot;MB1 Basis&quot;,   SomTv_MN3Kopf__c  ,   SomTv_MN3_Bruttoermittlung__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Nettoinvestment des Angebotes bzw. MN3= MN2-Skonto%</inlineHelpText>
        <label>MN3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MNettoTVMarktSoA__c</fullName>
        <description>Hochgerechneter Netto TV-Markt der 7.1M in %</description>
        <formula>SomTv_NettoUSize__c  *  SomTv_MNettoUSoA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hochgerechneter Netto TV-Markt der 7.1M in %</inlineHelpText>
        <label>7.1M Netto TV-Markt SoA, %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_MNettoUSoA__c</fullName>
        <description>Hochgerechneter Netto UniverseSoA der 7.1M in %</description>
        <formula>SomTv_MN3_Bruttoermittlung__c  /  Netto_USize__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hochgerechneter Netto UniverseSoA der 7.1M in %</inlineHelpText>
        <label>7.1M Netto USoA, %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_NRAngebot__c</fullName>
        <description>Naturalrabatt in % bezogen auf das Angebot</description>
        <inlineHelpText>Naturalrabatt in % bezogen auf das Angebot</inlineHelpText>
        <label>NR (%) Angebot</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_NRKopfEur__c</fullName>
        <description>Naturalrabatt in EUR</description>
        <formula>SomTv_NRKopf_c__c * SomTv_MB1_Bruttoermittlung__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Naturalrabatt in EUR</inlineHelpText>
        <label>NR in EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_NRKopf_c__c</fullName>
        <description>Naturalrabatt in %</description>
        <inlineHelpText>Naturalrabatt in %</inlineHelpText>
        <label>NR (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_NRKunde__c</fullName>
        <description>Naturalrabatt in % für Kunde</description>
        <inlineHelpText>Naturalrabatt in % für Kunde</inlineHelpText>
        <label>NR (%) Kunde</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_NRRM__c</fullName>
        <description>Naturalrabatt in % von Revenue Management</description>
        <inlineHelpText>Naturalrabatt in % von Revenue Management</inlineHelpText>
        <label>NR (%) RM</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_NR_DSB__c</fullName>
        <description>Naturalrabatt in %</description>
        <inlineHelpText>Naturalrabatt in %</inlineHelpText>
        <label>NR (%) DSB</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_NR__c</fullName>
        <description>Naturalrabatt in %</description>
        <inlineHelpText>Naturalrabatt in %</inlineHelpText>
        <label>NR (%) Sales</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_NettoGesamtMarkt__c</fullName>
        <description>Hochgerechneter Netto Werbe-Gesamtmarkt in EUR
&quot;TV Markt Netto&quot; / &quot;Media Mix TV Netto, %&quot;</description>
        <formula>SomTv_NettoTVMarkt__c  /  SomTv_TVMediaMix__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hochgerechneter Netto Werbe-Gesamtmarkt in EUR</inlineHelpText>
        <label>Netto Gesamt-Markt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_NettoTVMarkt__c</fullName>
        <description>Hochgerechneter TV-Gesamtmarkt in EUR</description>
        <formula>SomTv_MN3_Bruttoermittlung__c  /  SomTv_MNettoTVMarktSoA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hochgerechneter TV-Gesamtmarkt in EUR</inlineHelpText>
        <label>Netto TV-Markt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_NettoUSize__c</fullName>
        <inlineHelpText>Einschätzung der prozentualen Netto-Universe Size (Netto-SoA-7.1M &amp; IP) des Werbungtreibenden am TV-Markt</inlineHelpText>
        <label>Netto USize, %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_NrDsbEur__c</fullName>
        <description>Naturalrabatt in EUR DSB</description>
        <formula>SomTv_NR_DSB__c * SomTv_MB1_Bruttoermittlung__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Naturalrabatt in EUR DSB</inlineHelpText>
        <label>NR in EUR DSB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_NrHarmonyHinweis__c</fullName>
        <description>Hinweis zu Harmony-Naturalrabatten</description>
        <inlineHelpText>Hinweis zu Harmony-Naturalrabatten</inlineHelpText>
        <label>Hinweis Harmony-NR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_NrHarmony__c</fullName>
        <description>Harmony Naturalrabatt</description>
        <inlineHelpText>Harmony Naturalrabatt</inlineHelpText>
        <label>Harmony-NR</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_NrNeukundenHinweis__c</fullName>
        <description>Hinweis zu Neukunden-NR</description>
        <inlineHelpText>Hinweis zu Neukunden-NR</inlineHelpText>
        <label>Hinweis Neukunden-NR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>